--- a/foodji_ui/lib/l10n/app_en.arb
+++ b/foodji_ui/lib/l10n/app_en.arb
@@ -1,10 +1,21 @@
 {
   "@@locale": "en",
+  "locale": "en",
 
   "global_app_name": "FOODJi",
   "global_slogan": "Remix your meals to your heart's content",
 
   "demo_access": "Click here to access the demo",
   
+  "menu_recipes": "Recipes",
+  "menu_exploration": "Explore",
+  "menu_favourites": "Favorites",
+  "menu_profile": "Profile",
+  "menu_tools": "Tools",
+  "menu_converter": "Converter",
+  "menu_ingredients": "Ingredients",
+  "menu_pantry": "Pantry",
+  "menu_grocery": "Grocery List",
+
   "error_unknown": "An unknown error occured during the execution. Please restart the application."
 }
