F.S : Favorites on detail page
Favorites on detail page and addition of preparation and instructions page

--- a/foodji_ui/lib/l10n/app_en.arb
+++ b/foodji_ui/lib/l10n/app_en.arb
@@ -20,6 +20,9 @@
   "menu_pantry": "Pantry",
   "menu_grocery": "Grocery List",
 
+  "recipe_detail_preparation": "Preparation",
+  "recipe_detail_instructions": "Instructions",
+
   "recipe_description": "Description",
   "recipe_steps": "Steps",
   "recipe_no_steps": "Instructions",
