--- a/foodji_ui/lib/l10n/app_fr.arb
+++ b/foodji_ui/lib/l10n/app_fr.arb
@@ -20,6 +20,9 @@
   "menu_pantry": "Garde-Manger",
   "menu_grocery": "Liste d'épicerie",
 
+  "recipe_detail_preparation": "Préparation",
+  "recipe_detail_instructions": "Instructions",
+
   "recipe_description": "Description",
   "recipe_steps": "Instructions",
   "recipe_no_steps": "Aucune instruction n'a été ajoutée",
