F.S : Recipe detail page completed
A few elements are WIP, but at this state, PR is justified. Previous version was kept for learning purposes.

--- a/foodji_ui/lib/l10n/app_fr.arb
+++ b/foodji_ui/lib/l10n/app_fr.arb
@@ -21,7 +21,10 @@
   "menu_grocery": "Liste d'épicerie",
 
   "recipe_detail_preparation": "Préparation",
+  "recipe_detail_preparation_ingredients" : "Ingrédients",
+
   "recipe_detail_instructions": "Instructions",
+  "recipe_detail_instructions_instructions" : "Instructions",
 
   "recipe_description": "Description",
   "recipe_steps": "Instructions",
