--- a/foodji_ui/lib/l10n/app_en.arb
+++ b/foodji_ui/lib/l10n/app_en.arb
@@ -21,7 +21,10 @@
   "menu_grocery": "Grocery List",
 
   "recipe_detail_preparation": "Preparation",
+  "recipe_detail_preparation_ingredients" : "Ingredients",
+
   "recipe_detail_instructions": "Instructions",
+  "recipe_detail_instructions_instructions" : "Instructions",
 
   "recipe_description": "Description",
   "recipe_steps": "Steps",
