F.S : Ready for PR
All requested improvements made. Pages height and spacing in components still WIP.

--- a/foodji_ui/lib/l10n/app_en.arb
+++ b/foodji_ui/lib/l10n/app_en.arb
@@ -20,6 +20,8 @@
   "menu_pantry": "Pantry",
   "menu_grocery": "Grocery List",
 
+  "recipe_detail_minutes": "min",
+
   "recipe_detail_preparation": "Preparation",
   "recipe_detail_preparation_ingredients" : "Ingredients",
 
