Fe/feature/recipes (#11)
* F.S : Navigation bar

Navigation Bar, localized splash, states and pages refactoring

* F.S : Menus and speed-dial

Menus and basic page navigation implemented

* F.S : Nav Bar Maj Update

Nav bar changed to AppBar for better manual control. Now working perfectly with docked speed dial. Main class restored to functional. Problem solved on some pages.

* F.S : Recipes page started [WIP]

Recipes listed with pictures, filter to be implemented, multiple fixes.

* F.S : AppBar

Application now has AppBar widget

* F.S : Working filtering

Filtering added and working

* F.S : Observer Pattern [WIP]

Adding observer pattern to update page name when page is modified

* F.S : AppBar fully functionnal

Observer and observer pattern successfully implemented with global library.

* F.S : Linked recipe details page

Removal of many unuseful states as main pages with direct access from menu wont need these.

* F.S : Desired action on FAB

FAB now has desired onPress + onLongPress actions.

* F.S : Favorites

Favorites removed from nav and added to recipes page

* F.S : Progress save

Before detail page update

* F.S : New recipe detail page [WIP]

app bar and page header completed

* F.S : Favorites on detail page

Favorites on detail page and addition of preparation and instructions page

* F.S : Recipe detail page complete

Missing recipe detail preparation and ingredients page

* F.S : Recipe detail page completed

A few elements are WIP, but at this state, PR is justified. Previous version was kept for learning purposes.

* F.S : Ready for PR

All requested improvements made. Pages height and spacing in components still WIP.

--- a/foodji_ui/lib/l10n/app_en.arb
+++ b/foodji_ui/lib/l10n/app_en.arb
@@ -4,8 +4,11 @@
 
   "global_app_name": "FOODJi",
   "global_slogan": "Remix your meals to your heart's content",
+  "global_filter": "Filter",
 
-  "demo_access": "Click here to access the demo",
+  "app_bar_recipe_details": "Recipe details",
+
+  "demo_access": "Press anywhere on the screen to access the demo",
   
   "menu_recipes": "Recipes",
   "menu_exploration": "Explore",
@@ -17,6 +20,14 @@
   "menu_pantry": "Pantry",
   "menu_grocery": "Grocery List",
 
+  "recipe_detail_minutes": "min",
+
+  "recipe_detail_preparation": "Preparation",
+  "recipe_detail_preparation_ingredients" : "Ingredients",
+
+  "recipe_detail_instructions": "Instructions",
+  "recipe_detail_instructions_instructions" : "Instructions",
+
   "recipe_description": "Description",
   "recipe_steps": "Steps",
   "recipe_no_steps": "Instructions",
@@ -24,5 +35,6 @@
   "recipe_no_steps": "Aucune instruction n'a été ajoutée",
   "recipe_no_ingredients": "Aucun ingrédient n'a été ajouté",
 
-  "error_unknown": "An unknown error occured during the execution. Please restart the application."
+  "error_unknown": "An unknown error occured during the execution. Press anywhere to restart the application.",
+  "error_authentification": "An authentication error occured during the execution. To access this feature, press anywhere on this page to restart the application."
 }
