--- a/foodji_ui/lib/l10n/app_fr.arb
+++ b/foodji_ui/lib/l10n/app_fr.arb
@@ -46,6 +46,14 @@
   "tag_seafood_free": "Sans produit de la mer",
   "tag_halal": "Halal",
   "tag_kosher": "Kascher",
+
+  "category_filter": "Catégorie",
+  "category_breakfast": "Déjeuner",
+  "category_lunch": "Dîner",
+  "category_diner": "Souper",
+  "category_dessert": "Dessert",
+  "category_snack": "Collation",
+  "category_beverage": "Breuvage",
   
   "error_unknown": "Une erreur inconnue est survenue durant l'exécution. Appuyez sur l'écran pour redémarrer l'application.",
   "error_authentification": "Une erreur d'authentification est survenue durant l'exécution. Pour accéder à cette fonctionnalité, appuyez sur l'écran pour redémarrer l'application."
