--- a/foodji_ui/lib/l10n/app_en.arb
+++ b/foodji_ui/lib/l10n/app_en.arb
@@ -30,10 +30,32 @@
 
   "recipe_description": "Description",
   "recipe_steps": "Steps",
-  "recipe_no_steps": "Instructions",
-  "recipe_no_ingredients": "Instructions",
   "recipe_no_steps": "Aucune instruction n'a été ajoutée",
   "recipe_no_ingredients": "Aucun ingrédient n'a été ajouté",
+
+  "ingredient_substitutions": "Substitutions",
+
+  "tag_filter": "Advanced filters",
+  "tag_vegan": "Vegan",
+  "tag_vegetarian": "Vegetarian",
+  "tag_gluten_free": "Gluten free",
+  "tag_soy_free": "Soy free",
+  "tag_nut_free": "Nut free",
+  "tag_peanut_free": "Peanut free",
+  "tag_lactose_free": "Lactose free",
+  "tag_milk_free": "Milk free",
+  "tag_wheat_free": "Wheat free",
+  "tag_seafood_free": "Seafood free",
+  "tag_halal": "Halal",
+  "tag_kosher": "Kosher",
+
+  "category_filter": "Category",
+  "category_breakfast": "Breakfast",
+  "category_lunch": "Lunch",
+  "category_diner": "Diner",
+  "category_dessert": "Dessert",
+  "category_snack": "Snack",
+  "category_beverage": "Beverage",
 
   "error_unknown": "An unknown error occured during the execution. Press anywhere to restart the application.",
   "error_authentification": "An authentication error occured during the execution. To access this feature, press anywhere on this page to restart the application."
