F.S : BE and FE integration
BE and FE partially integrated. Recipe creation and edition will be completed by Guillaume when the page will be available.

--- a/foodji_ui/lib/l10n/app_en.arb
+++ b/foodji_ui/lib/l10n/app_en.arb
@@ -40,6 +40,7 @@
   "tag_vegetarian": "Vegetarian",
   "tag_gluten_free": "Gluten free",
   "tag_soy_free": "Soy free",
+  "tag_egg_free": "Egg free",
   "tag_nut_free": "Nut free",
   "tag_peanut_free": "Peanut free",
   "tag_lactose_free": "Lactose free",
@@ -50,12 +51,17 @@
   "tag_kosher": "Kosher",
 
   "category_filter": "Category",
-  "category_breakfast": "Breakfast",
-  "category_lunch": "Lunch",
-  "category_diner": "Diner",
+  "category_main_course": "Main course",
+  "category_side_dish": "Side dish",
+  "category_appetizer": "Appetizer",
   "category_dessert": "Dessert",
-  "category_snack": "Snack",
+  "category_lunch": "Lunch",
+  "category_breakfast": "Breakfast",
   "category_beverage": "Beverage",
+  "category_soup": "Soup",
+  "category_sauce": "Sauce",
+  "category_bread": "Bread",
+  "category_snack": "Snack",
 
   "error_unknown": "An unknown error occured during the execution. Press anywhere to restart the application.",
   "error_authentification": "An authentication error occured during the execution. To access this feature, press anywhere on this page to restart the application."
