--- a/foodji_ui/lib/l10n/app_fr.arb
+++ b/foodji_ui/lib/l10n/app_fr.arb
@@ -40,6 +40,7 @@
   "tag_vegetarian": "Végétarien",
   "tag_gluten_free": "Sans gluten",
   "tag_soy_free": "Sans soya",
+  "tag_egg_free": "Sans oeuf",
   "tag_nut_free": "Sans noix",
   "tag_peanut_free": "Sans arachide",
   "tag_lactose_free": "Sans lactose",
@@ -50,12 +51,17 @@
   "tag_kosher": "Kascher",
 
   "category_filter": "Catégorie",
-  "category_breakfast": "Déjeuner",
-  "category_lunch": "Dîner",
-  "category_diner": "Souper",
+  "category_main_course": "Repas principal",
+  "category_side_dish": "Accompagnement",
+  "category_appetizer": "Entrée",
   "category_dessert": "Dessert",
-  "category_snack": "Collation",
+  "category_lunch": "Dîner",
+  "category_breakfast": "Déjeuner",
   "category_beverage": "Breuvage",
+  "category_soup": "Soupe",
+  "category_sauce": "Sauce",
+  "category_bread": "Pain",
+  "category_snack": "Collation",
   
   "error_unknown": "Une erreur inconnue est survenue durant l'exécution. Appuyez sur l'écran pour redémarrer l'application.",
   "error_authentification": "Une erreur d'authentification est survenue durant l'exécution. Pour accéder à cette fonctionnalité, appuyez sur l'écran pour redémarrer l'application."
