--- a/foodji_ui/lib/l10n/app_en.arb
+++ b/foodji_ui/lib/l10n/app_en.arb
@@ -15,6 +15,8 @@
   "authentification_login": "Login",
   "authentification_no_account": "No account yet?",
   "authentification_register": "Create account",
+  "authentification_error": "Please verify the provided informations and try again.",
+  "registration_error": "The provided email may already be linked to an existing account. Please verify or modify the provided informations and try again.",
 
   "menu_recipes": "Recipes",
   "menu_exploration": "Explore",
