--- a/foodji_ui/lib/l10n/app_fr.arb
+++ b/foodji_ui/lib/l10n/app_fr.arb
@@ -15,6 +15,8 @@
   "authentification_login": "Connexion",
   "authentification_no_account": "Pas de compte?",
   "authentification_register": "S'enregistrer",
+  "authentification_error": "Veuillez vérifier les informations fournies et essayer de nouveau.",
+  "registration_error": "Le courriel est peut-être lié à un compte existant. Veuillez vérifier ou modifier les information et essayer de nouveau.",
 
   "menu_recipes": "Recettes",
   "menu_exploration": "Explorer",
