--- a/foodji_ui/lib/l10n/app_fr.arb
+++ b/foodji_ui/lib/l10n/app_fr.arb
@@ -24,9 +24,9 @@
 
   "recipe_name": "Name",
   "recipe_description": "Description",
-  "recipe_serves": "Serves",
-  "recipe_step": "Step",
-  "recipe_steps": "Steps",
+  "recipe_serves": "Portions",
+  "recipe_step": "Étape",
+  "recipe_steps": "Étapes",
   "recipe_ingredient": "Ingrédient",
   "recipe_ingredients": "Ingrédients",
   "recipe_instructions": "Instructions",
@@ -66,7 +66,7 @@
   "category_sauce": "Sauce",
   "category_bread": "Pain",
   "category_snack": "Collation",
-  
+
   "form_is_required": "est requis",
   "form_error": "Formulaire invalide",
   "form_item_dismissed": "Item retiré",
