--- a/foodji_ui/lib/l10n/app_en.arb
+++ b/foodji_ui/lib/l10n/app_en.arb
@@ -67,6 +67,18 @@
   "category_bread": "Bread",
   "category_snack": "Snack",
 
+  "form_is_required": "is Required",
+  "form_error": "Form not valid",
+  "form_item_dismissed": "Item dismissed",
+  "form_item": "Item",
+
+  "form_recipe_title": "Recipe Editor",
+  "form_recipe_updated": "Recipe updated",
+  "form_recipe_error": "Form not valid",
+
+  "value": "Value",
+  "result": "Result",
+
   "unit_type_milliliter": "milliliter",
   "unit_type_liter": "liter",
   "unit_type_cup": "cup",
@@ -78,15 +90,6 @@
   "unit_type_ounce": "ounce",
   "unit_type_pound": "pound",
   "unit_type_unit": "unit",
-
-  "form_is_required": "is Required",
-  "form_error": "Form not valid",
-  "form_item_dismissed": "Item dismissed",
-  "form_item": "Item",
-
-  "form_recipe_title": "Recipe Editor",
-  "form_recipe_updated": "Recipe updated",
-  "form_recipe_error": "Form not valid",
 
   "error_unknown": "An unknown error occured during the execution. Press anywhere to restart the application.",
   "error_authentification": "An authentication error occured during the execution. To access this feature, press anywhere on this page to restart the application."
