--- a/foodji_ui/lib/l10n/app_en.arb
+++ b/foodji_ui/lib/l10n/app_en.arb
@@ -6,6 +6,13 @@
   "global_slogan": "Remix your meals to your heart's content",
   "global_filter": "Filter",
 
+  "global_form_add": "Add",
+  "global_form_cancel": "Cancel",
+  "global_form_delete": "Delete",
+  "global_form_discard": "Discard",
+  "global_form_discard_message": "Discard changes?",
+  "global_form_delete_message": "Definitely delete this item?",
+
   "app_bar_recipe_details": "Recipe details",
 
   "demo_access": "Press anywhere on the screen to access the demo",
