F.S : [WIP] SLL issue
AppLocalization and SSL issues.

--- a/foodji_ui/lib/l10n/app_en.arb
+++ b/foodji_ui/lib/l10n/app_en.arb
@@ -19,7 +19,7 @@
   
   "authentification_sign_in": "Welcome to Foodji! Sign in or create a new account to discover everything we have to offer.",
   "authentification_sign_up": "Welcome to Foodji! Sign up by entering your informations below.",
-  "authentification_sign_up_instructions": "By signing up, you agree to terms and conditions we haven't exactly defined yet. When you think about it, it's like choosing the red pill. Be a Neo. We can only promise you one thing for joining us ; we have cookie... recipes.",
+  "authentification_sign_up_instructions": "By using Foodji, you agree to terms and conditions we haven't exactly defined yet. When you think about it, it's like choosing the red pill. Be a Neo. We can only promise you one thing for joining us ; we have cookie... recipes.",
   "authentification_email": "Email",
   "authentification_password": "Password",
   "authentification_login": "Login",
