--- a/foodji_ui/lib/l10n/app_fr.arb
+++ b/foodji_ui/lib/l10n/app_fr.arb
@@ -13,6 +13,8 @@
   "global_form_discard_message": "Ignorer les changements?",
   "global_form_delete_message": "Supprimer définitivement l'item?",
 
+  "no_image": "AUCUNE IMAGE DISPONIBLE",
+
   "app_bar_recipe_details": "Détails de la recette",
 
   "demo_access": "Appuyez sur l'écran pour accéder à la démonstration",
