Added ingredient details and substitution to recipe_detail_preparation.dart

--- a/foodji_ui/lib/l10n/app_fr.arb
+++ b/foodji_ui/lib/l10n/app_fr.arb
@@ -86,17 +86,17 @@
   "value": "Valeur",
   "result": "Résutat",
 
-  "unit_type_milliliter": "millilitre",
-  "unit_type_liter": "litre",
-  "unit_type_cup": "tasse",
-  "unit_type_tablespoon": "cuillère à table",
-  "unit_type_teaspoon": "cuillère à thé",
-  "unit_type_fluidOunce": "once liquide",
-  "unit_type_gram": "gramme",
-  "unit_type_kilogram": "kilogramme",
-  "unit_type_ounce": "once",
-  "unit_type_pound": "livre",
-  "unit_type_unit": "unité",
+  "unit_type_milliliter": "millilitres",
+  "unit_type_liter": "litres",
+  "unit_type_cup": "tasses",
+  "unit_type_tablespoon": "cuillères à table",
+  "unit_type_teaspoon": "cuillères à thé",
+  "unit_type_fluidOunce": "onces liquid",
+  "unit_type_gram": "grammes",
+  "unit_type_kilogram": "kilogrammes",
+  "unit_type_ounce": "onces",
+  "unit_type_pound": "livres",
+  "unit_type_unit": "unitée",
 
   "error_unknown": "Une erreur inconnue est survenue durant l'exécution. Appuyez sur l'écran pour redémarrer l'application.",
   "error_authentification": "Une erreur d'authentification est survenue durant l'exécution. Pour accéder à cette fonctionnalité, appuyez sur l'écran pour redémarrer l'application."
