--- a/foodji_ui/lib/l10n/app_fr.arb
+++ b/foodji_ui/lib/l10n/app_fr.arb
@@ -92,12 +92,12 @@
   "unit_type_cup": "tasses",
   "unit_type_tablespoon": "cuillères à table",
   "unit_type_teaspoon": "cuillères à thé",
-  "unit_type_fluidOunce": "onces liquid",
+  "unit_type_fluidOunce": "onces liquides",
   "unit_type_gram": "grammes",
   "unit_type_kilogram": "kilogrammes",
   "unit_type_ounce": "onces",
   "unit_type_pound": "livres",
-  "unit_type_unit": "unitée",
+  "unit_type_unit": "unités",
 
   "error_unknown": "Une erreur inconnue est survenue durant l'exécution. Appuyez sur l'écran pour redémarrer l'application.",
   "error_authentification": "Une erreur d'authentification est survenue durant l'exécution. Pour accéder à cette fonctionnalité, appuyez sur l'écran pour redémarrer l'application."
