Fe/feature/substitutions interface (#42)
* Added sub list in recipes page
  * first draft, not 100% working

* Added ingredient details and substitution to recipe_detail_preparation.dart

* Created translatlion_util.dart for translation related getters

* Fixed Page overflow in recipe details

* CR fixes

--- a/foodji_ui/lib/l10n/app_en.arb
+++ b/foodji_ui/lib/l10n/app_en.arb
@@ -39,7 +39,6 @@
   "recipe_ingredients": "Ingredients",
   "recipe_instructions": "Instructions",
   "recipe_instruction": "Instruction",
-  "recipe_preparation": "Preparation",
   "recipe_amount": "Amount",
 
   "recipe_no_steps": "Aucune instruction n'a été ajoutée",
@@ -83,6 +82,7 @@
   "form_recipe_title": "Recipe Editor",
   "form_recipe_updated": "Recipe updated",
   "form_recipe_error": "Form not valid",
+  "form_recipe_ingredient_substitute_add": "Add a substitute",
 
   "value": "Value",
   "result": "Result",
