--- a/foodji_ui/lib/l10n/app_fr.arb
+++ b/foodji_ui/lib/l10n/app_fr.arb
@@ -39,7 +39,6 @@
   "recipe_ingredients": "Ingrédients",
   "recipe_instructions": "Instructions",
   "recipe_instruction": "Instruction",
-  "recipe_preparation": "Préparation",
   "recipe_amount": "Quantité",
 
   "recipe_no_steps": "Aucune instruction n'a été ajoutée",
@@ -83,21 +82,22 @@
   "form_recipe_title": "Édition de recette",
   "form_recipe_updated": "Recette mise à jour",
   "form_recipe_error": "Formulaire invalide",
+  "form_recipe_ingredient_substitute_add": "Ajouter un substitut",
   
   "value": "Valeur",
   "result": "Résutat",
 
-  "unit_type_milliliter": "millilitre",
-  "unit_type_liter": "litre",
-  "unit_type_cup": "tasse",
-  "unit_type_tablespoon": "cuillère à table",
-  "unit_type_teaspoon": "cuillère à thé",
-  "unit_type_fluidOunce": "once liquide",
-  "unit_type_gram": "gramme",
-  "unit_type_kilogram": "kilogramme",
-  "unit_type_ounce": "once",
-  "unit_type_pound": "livre",
-  "unit_type_unit": "unité",
+  "unit_type_milliliter": "millilitres",
+  "unit_type_liter": "litres",
+  "unit_type_cup": "tasses",
+  "unit_type_tablespoon": "cuillères à table",
+  "unit_type_teaspoon": "cuillères à thé",
+  "unit_type_fluidOunce": "onces liquides",
+  "unit_type_gram": "grammes",
+  "unit_type_kilogram": "kilogrammes",
+  "unit_type_ounce": "onces",
+  "unit_type_pound": "livres",
+  "unit_type_unit": "unités",
 
   "error_unknown": "Une erreur inconnue est survenue durant l'exécution. Appuyez sur l'écran pour redémarrer l'application.",
   "error_authentification": "Une erreur d'authentification est survenue durant l'exécution. Pour accéder à cette fonctionnalité, appuyez sur l'écran pour redémarrer l'application."
